# majava

./: .flake8  README.md  formats.py  fs.py  matchers.py  pyproject.toml  requirements.txt
.github/workflows/: ci-tests.yml
majava/: __init__.py  basic.py  formats.py  fs.py  matchers.py
pyma/: basic.py  matchers.py  pytplug.py  test_fs.py
tests/: common.py  test_basic.py  test_containers.py  test_core.py  test_formats.py
